--- a/index.html
+++ b/index.html
@@ -24,7 +24,27 @@
                 <p>You <em>know</em>
                 you want to.</p>
         </header>
-        
+        <form action="#">
+            <fieldset>
+                <legend>Plug In Now</legend>
+                <div class="form-column-1">
+                    <label for="firstName">FIRST NAME</label>
+                    <input type="text" id="firstName">
+                    <label for="email">EMAIL</label>
+                    <input type="email" id="email">
+                    <label for="password">PASSWORD</label>
+                    <input type="password" id="password">
+                </div>
+                <div class="form-column-2">
+                    <label for="lastName">LAST NAME</label>
+                    <input type="text" id="lastName">
+                    <label for="phoneNumber">PHONE NUMBER</label>
+                    <input type="tel" id="phoneNumber">
+                    <label for="confirmPassword">CONFIRM PASSWORD</label>
+                    <input type="password" id="confirmPassword">
+                </div>
+            </fieldset>
+        </form>
     </div>
 </body>
 </html>
