--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </header>
         </div>
         <div id="form">
-            <form action="#">
+            <form action="#" id="sign-up-form">
                 <fieldset>
                     <legend>Plug In Now</legend>
                     <div class="form-column-1">
@@ -36,7 +36,7 @@
                         <label for="email">EMAIL</label>
                         <input type="email" placeholder="agentsmth@matrix.com" id="email" required>
                         <label for="password">PASSWORD</label>
-                        <input type="password" id="password" minlength="8" placeholder="********" required>
+                        <input type="password" id="password" minlength="8" placeholder="********" onchange='check_pass();' required>
                     </div>
                     <div class="form-column-2">
                         <label for="lastName">LAST NAME</label>
@@ -44,12 +44,16 @@
                         <label for="phoneNumber">PHONE NUMBER</label>
                         <input type="tel" id="phoneNumber" placeholder="xxx-xxx-xxxx" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
                         <label for="confirmPassword">CONFIRM PASSWORD</label>
-                        <input type="password" placeholder="********"id="confirmPassword" minlength="8" required>
+                        <input type="password" placeholder="********"id="confirmPassword" minlength="8" onchange='check_pass();' required>
                     </div>
                     <div class="progress-circle"></div>
                 </fieldset>
             </form>
-        </div>  
+        </div>
+        <div class="bottom">
+            <button type="submit" form="sign-up-form" id="button" disabled>Create Account</button>
+            <div class="message"></div>
+        </div>
     </div>
 </body>
 </html>
