--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <button type="submit" form="sign-up-form" id="button" disabled>Create Account</button>
             <div class="message"></div>
         </div>
+        <span>Already have an account? <a href="#" id="login">Log in</a></span>
     </div>
 </body>
 </html>
