fix responsive settings

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="javascript.js" defer></script>
 </head>
 <body>
-    <div id="pic-container"><img src="gifs/matrix.gif"/>
+    <div id="pic-container">
         <div id="transparent-container">
             Enter the Matrix
         </div>
